# design-patterns

./: .gitignore  README.md
1.Solid/: CMakeLists.txt
1.Solid/src/: interface_segregation.cpp  liskov_substitution.cpp  single_responsability.cpp
1.solid/src/: dependecy_inversion.cpp  open_closed.cpp
10.Facade/: CMakeLists.txt
10.Facade/src/: boost-flyweight.cpp  handmade-flyweight.cpp
11.Flyweight/: CMakeLists.txt
11.Flyweight/src/: boost-flyweight.cpp  exercise.cpp  handmade-flyweight.cpp  text-formatting.cpp
2.Builder/: CMakeLists.txt
2.Builder/include/Facets/: Person.hpp  PersonAddressBuilder.hpp  PersonBuilder.hpp  PersonJobBuilder.hpp
2.Builder/src/: builder.cpp  exercise.cpp  facets.cpp  fluent.cpp  groovy.cpp  motivation.cpp
2.Builder/src/Facets/: Person.cpp  PersonBuilder.cpp
3.Factories/: CMakeLists.txt
3.Factories/include/Abstract/: DrinkFactory.hpp  HotDrink.hpp  HotDrinkFactory.hpp
3.Factories/src/: exercise.cpp  factory.cpp  factory_abstract.cpp  factory_inner.cpp  factory_method.cpp  motivation.cpp
4.Prototype/: CMakeLists.txt
4.Prototype/src/: record_keeping.cpp
6.Adapters/: CMakeLists.txt
6.Adapters/include/: Geometry.h  mainwindow.h
6.Adapters/src/: exercise.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
7.Bridge/: CMakeLists.txt
7.Bridge/include/: Foo.hpp  Person.hpp  pimpl.hpp
7.Bridge/src/: Foo.cpp  Person.cpp  bridge.cpp  exercise.cpp  pimpl.cpp
8.Composite/: CMakeLists.txt
8.Composite/src/: array_backed.cpp  exercise.cpp  geometric_shapes.cpp  neuronal_networks.cpp
9.Decorator/: CMakeLists.txt
9.Decorator/src/: dynamic_decorator.cpp  exercise.cpp  functional_decorator.cpp  static_decorator.cpp
