cmake_minimum_required(VERSION 3.2)
project(solid)

add_executable(single_responsability src/single_responsability.cpp)
add_executable(open_closed src/open_closed.cpp)
add_executable(liskov_substitution src/liskov_substitution.cpp)
add_executable(interface_segregation src/interface_segregation.cpp)
add_executable(dependecy_inversion src/dependecy_inversion.cpp)